--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I am a PhD candidate in Computer Science at the University of Houston, working at the
+        I am a PhD candidate in Computer Science at the <a href="https://www.uh.edu/">University of Houston</a>, advised by <a href="https://shishirkshah.github.io/">Dr. Shihsir Shah</a> working at the
         intersection of applied machine learning, representation learning, and robustness
         for real-world, high-variability datasets.
       </p>
@@ -38,7 +38,7 @@
         imaging and perception problems.
       </p>
       <p>
-        I have industry research experience at Shell, where I built end-to-end ML pipelines,
+        I have industry research experience at <a href="https://www.shell.us/">Shell</a>, where I built end-to-end ML pipelines,
         conducted controlled experiments, and translated model outputs into actionable
         decision-support tools.
       </p>
