updated style files

--- a/index.html
+++ b/index.html
@@ -131,3 +131,13 @@
   </div>
 
 </section>
+
+<footer>
+      <p class="muted">
+        © 2026 Samiha Mirza · Built with HTML & GitHub Pages
+      </p>
+    </footer>
+
+  </div>
+</body>
+</html>
