--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         during later stages via a weighted loss. Ongoing work is focusing on utilizing CycleGANs to achieve domain adaptation
       </p>
       <p class="project-links">
-  <a href="https://www.springerprofessional.de/en/recall-based-knowledge-distillation-for-data-distribution-based-/50272374">paper</a> ·
+  <a href="https://www.springerprofessional.de/en/recall-based-knowledge-distillation-for-data-distribution-based-/50272374">Paper</a> ·
 </p>
       <!-- Optional links -->
       <!-- <p class="project-links"><a href="#">Paper</a> · <a href="#">Code</a></p> -->
@@ -116,8 +116,8 @@
         unseen domains, highlighting dataset curation as a first-class design choice in seismic interpretation pipelines.
       </p>
       <p class="project-links">
-  <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2025101452">Paper1</a>
-  <a href="https://www.scitepress.org/Papers/2025/131664/131664.pdf">Paper2</a>
+  <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2025101452">Paper1</a> ·
+  <a href="https://www.scitepress.org/Papers/2025/131664/131664.pdf">Paper2</a> ·
 </p>
     </div>
   </div>
