--- a/index.html
+++ b/index.html
@@ -124,6 +124,121 @@
 
 </section>
 
+<section>
+  <h2>Selected Publications</h2>
+
+  <!-- Paper 1 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Seismic and Label Quality Assessment: A Framework for Improving AI Models for Seismic Interpretation
+      </div>
+      <div class="pub-authors">
+        S. Mirza, A. Gala, P. Devarakota, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2025101452">paper</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 2 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Recall-Based Knowledge Distillation for Data Distribution Based Catastrophic Forgetting in Semantic Segmentation
+      </div>
+      <div class="pub-authors">
+        S. Mirza, A. Gala, P. Devarakota, V. D. Nguyen, P. Mantini, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://www.springerprofessional.de/en/recall-based-knowledge-distillation-for-data-distribution-based-/50272374">paper</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 3 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Data Quality Aware Approaches for Addressing Model Drift of Semantic Segmentation Models
+      </div>
+      <div class="pub-authors">
+        S. Mirza, V. D. Nguyen, P. Mantini, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://arxiv.org/abs/2402.07258">arXiv</a>
+      </div>
+    </div>
+  </div>
+
+    <!-- Paper 6 -->
+    <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Integrating Image Quality Assessment Metrics for Enhanced Segmentation Performance in Reconstructed Imaging Datasets
+      </div>
+      <div class="pub-authors">
+        S. Mirza, A. Gala, P. Devarakota, P. Mantini, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://www.scitepress.org/Papers/2025/131664/131664.pdf">paper</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 4 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Attention-Based Shape and Gait Representations Learning for Video-Based Cloth-Changing Person Re-Identification
+      </div>
+      <div class="pub-authors">
+        V. D. Nguyen, S. Mirza, P. Mantini, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://arxiv.org/abs/2402.03716">arXiv</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 5 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Tackling Domain Shifts in Person Re-Identification: A Survey and Analysis
+      </div>
+      <div class="pub-authors">
+        V. D. Nguyen, S. Mirza, A. Zakeri, A. Gupta, K. Khaldi, R. Aloui, P. Mantini, et al.
+      </div>
+      <div class="pub-links">
+        <a href="https://openaccess.thecvf.com/content/CVPR2024W/CLVISION/html/Nguyen_Tackling_Domain_Shifts_in_Person_Re-Identification_A_Survey_and_Analysis_CVPRW_2024_paper.html">paper</a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Paper 7 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Deep Learning-Based Computer-Aided Classification of Amniotic Fluid Using Ultrasound Images from Saudi Arabia
+      </div>
+      <div class="pub-authors">
+        I. U. Khan, N. Aslam, F. M. Anis, S. Mirza, A. AlOwayed, R. M. Aljuaid, R. M. Bakr, et al.
+      </div>
+      <div class="pub-links">
+        <a href="https://www.mdpi.com/2504-2289/6/4/107">paper</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 8 -->
+
+
+</section>
+
+
 <footer>
       <p class="muted">
         © 2026 Samiha Mirza · Built with HTML & GitHub Pages
