--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         PhD Candidate in Computer Science · Applied Machine Learning · Data-Centric AI
       </p>
       <p class="links">
-        <a href="mailto:samiha.mirza1234@gmail.com">Email</a> ·
-        <a href="https://www.linkedin.com/in/samiha-mirza-a437b2160">LinkedIn</a> ·
-        <a href="https://scholar.google.com/citations?user=R1Iy2mAAAAAJ&hl=en&oi=ao">Scholar</a> ·
+        <a href="mailto:samiha.mirza1234@gmail.com">Email</a> /
+        <a href="https://www.linkedin.com/in/samiha-mirza-a437b2160">LinkedIn</a> /
+        <a href="https://scholar.google.com/citations?user=R1Iy2mAAAAAJ&hl=en&oi=ao">Scholar</a> /
         <a href="Samiha_2026_Resume_T.pdf">CV</a>
       </p>
     </header>
@@ -134,7 +134,7 @@
         Seismic and Label Quality Assessment: A Framework for Improving AI Models for Seismic Interpretation
       </div>
       <div class="pub-authors">
-        S. Mirza, A. Gala, P. Devarakota, S. K. Shah
+        <b>S. Mirza</b>, A. Gala, P. Devarakota, S. K. Shah
       </div>
       <div class="pub-links">
         <a href="https://www.earthdoc.org/content/papers/10.3997/2214-4609.2025101452">paper</a>
@@ -149,7 +149,7 @@
         Recall-Based Knowledge Distillation for Data Distribution Based Catastrophic Forgetting in Semantic Segmentation
       </div>
       <div class="pub-authors">
-        S. Mirza, A. Gala, P. Devarakota, V. D. Nguyen, P. Mantini, S. K. Shah
+        <b>S. Mirza</b>, A. Gala, P. Devarakota, V. D. Nguyen, P. Mantini, S. K. Shah
       </div>
       <div class="pub-links">
         <a href="https://www.springerprofessional.de/en/recall-based-knowledge-distillation-for-data-distribution-based-/50272374">paper</a>
@@ -164,7 +164,7 @@
         Data Quality Aware Approaches for Addressing Model Drift of Semantic Segmentation Models
       </div>
       <div class="pub-authors">
-        S. Mirza, V. D. Nguyen, P. Mantini, S. K. Shah
+        <b>S. Mirza</b>, V. D. Nguyen, P. Mantini, S. K. Shah
       </div>
       <div class="pub-links">
         <a href="https://arxiv.org/abs/2402.07258">arXiv</a>
@@ -179,7 +179,7 @@
         Integrating Image Quality Assessment Metrics for Enhanced Segmentation Performance in Reconstructed Imaging Datasets
       </div>
       <div class="pub-authors">
-        S. Mirza, A. Gala, P. Devarakota, P. Mantini, S. K. Shah
+        <b>S. Mirza</b>, A. Gala, P. Devarakota, P. Mantini, S. K. Shah
       </div>
       <div class="pub-links">
         <a href="https://www.scitepress.org/Papers/2025/131664/131664.pdf">paper</a>
@@ -194,7 +194,7 @@
         Attention-Based Shape and Gait Representations Learning for Video-Based Cloth-Changing Person Re-Identification
       </div>
       <div class="pub-authors">
-        V. D. Nguyen, S. Mirza, P. Mantini, S. K. Shah
+        V. D. Nguyen, <b>S. Mirza</b>, P. Mantini, S. K. Shah
       </div>
       <div class="pub-links">
         <a href="https://arxiv.org/abs/2402.03716">arXiv</a>
@@ -209,7 +209,7 @@
         Tackling Domain Shifts in Person Re-Identification: A Survey and Analysis
       </div>
       <div class="pub-authors">
-        V. D. Nguyen, S. Mirza, A. Zakeri, A. Gupta, K. Khaldi, R. Aloui, P. Mantini, et al.
+        V. D. Nguyen, <b>S. Mirza</b>, A. Zakeri, A. Gupta, K. Khaldi, R. Aloui, P. Mantini, et al.
       </div>
       <div class="pub-links">
         <a href="https://openaccess.thecvf.com/content/CVPR2024W/CLVISION/html/Nguyen_Tackling_Domain_Shifts_in_Person_Re-Identification_A_Survey_and_Analysis_CVPRW_2024_paper.html">paper</a>
@@ -225,7 +225,7 @@
         Deep Learning-Based Computer-Aided Classification of Amniotic Fluid Using Ultrasound Images from Saudi Arabia
       </div>
       <div class="pub-authors">
-        I. U. Khan, N. Aslam, F. M. Anis, S. Mirza, A. AlOwayed, R. M. Aljuaid, R. M. Bakr, et al.
+        I. U. Khan, N. Aslam, F. M. Anis, <b>S. Mirza</b>, A. AlOwayed, R. M. Aljuaid, R. M. Bakr, et al.
       </div>
       <div class="pub-links">
         <a href="https://www.mdpi.com/2504-2289/6/4/107">paper</a>
