--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I am a PhD candidate in Computer Science at the <a href="https://www.uh.edu/">University of Houston</a>, advised by <a href="https://shishirkshah.github.io/">Dr. Shihsir Shah</a> working at the
-        intersection of applied machine learning, representation learning, and robustness
-        for real-world, high-variability datasets.
+        I am a PhD candidate in Computer Science at the <a href="https://www.uh.edu/">University of Houston</a>, advised by <a href="https://shishirkshah.github.io/">Dr. Shihsir Shah</a>. 
+My work focuses on applied machine learning, representation learning, and robustness for real-world, high-variability datasets.
+
       </p>
       <p>
         My research focuses on <b>data-centric AI</b>: understanding how data quality,
@@ -40,7 +40,8 @@
       <p>
         I have industry research experience at <a href="https://www.shell.us/">Shell</a>, where I built end-to-end ML pipelines,
         conducted controlled experiments, and translated model outputs into actionable
-        decision-support tools.
+        decision-support tools. Outside of work, I enjoy staying active, exploring new restaurants, 
+        traveling, and spending time with cats.
       </p>
     </section>
 
