--- a/index.html
+++ b/index.html
@@ -158,20 +158,20 @@ My work focuses on applied machine learning, representation learning, and robust
     </div>
   </div>
 
-  <!-- Paper 3 -->
-  <div class="pub-row">
+     <!-- Paper 6 -->
+    <div class="pub-row">
     <div class="pub-text">
       <div class="pub-title">
-        Data Quality Aware Approaches for Addressing Model Drift of Semantic Segmentation Models
+        A Data Centric Framework for Seismic Data Selection Using Latent Space Distribution Analysis
       </div>
       <div class="pub-authors">
-        <b>S. Mirza</b>, V. D. Nguyen, P. Mantini, S. K. Shah
+        <b>S. Mirza</b>, A. Gala, P. Devarakota, S. K. Shah
       </div>
       <div class="pub-links">
-        <a href="https://arxiv.org/abs/2402.07258">arXiv</a>
+        <a href="">paper</a>
       </div>
     </div>
-  </div>
+  </div> 
 
     <!-- Paper 6 -->
     <div class="pub-row">
@@ -184,6 +184,21 @@ My work focuses on applied machine learning, representation learning, and robust
       </div>
       <div class="pub-links">
         <a href="https://www.scitepress.org/Papers/2025/131664/131664.pdf">paper</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Paper 3 -->
+  <div class="pub-row">
+    <div class="pub-text">
+      <div class="pub-title">
+        Data Quality Aware Approaches for Addressing Model Drift of Semantic Segmentation Models
+      </div>
+      <div class="pub-authors">
+        <b>S. Mirza</b>, V. D. Nguyen, P. Mantini, S. K. Shah
+      </div>
+      <div class="pub-links">
+        <a href="https://arxiv.org/abs/2402.07258">arXiv</a>
       </div>
     </div>
   </div>
